Update role system

--- a/config/common.neon
+++ b/config/common.neon
@@ -25,3 +25,4 @@ security:
 services:
     - App\Router\RouterFactory::createRouter
     - App\Model\Authenticator
+    - App\Model\AuthorizatorFactory::create
