--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,6 @@
 		"nette/application": "^3.1",
 		"nette/bootstrap": "^3.1",
 		"nette/caching": "^3.1",
-		"nette/database": "^3.1",
 		"nette/di": "^3.0",
 		"nette/finder": "^2.5",
 		"nette/forms": "^3.1",
@@ -20,8 +19,7 @@
 		"nette/utils": "^3.2",
 		"latte/latte": "^2.9",
 		"tracy/tracy": "^2.8",
-		"contributte/console": "^0.9.1",
-		"ging-dev/nette-eloquent": "^1.0"
+		"gabordemooij/redbean": "^5.7"
 	},
 	"require-dev": {
 		"nette/tester": "^2.3",
